[package]
name = "gnostr-serve"
version = "0.0.1"
authors = ["gnostr <admin@gnostr.org>", "Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.13"
route-recognizer = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.13"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
